--- a/assets/style.css
+++ b/assets/style.css
@@ -56,7 +56,7 @@ a{
 
 
 body{
-    background-color: rgb(121, 218, 248);
+    background-color: rgb(210, 227, 232);
 }
 
 .container--text{
@@ -66,7 +66,76 @@ body{
 .ctn--img{
     padding: 5px 0;
     width: 100%;
+    max-height: 29rem;
 }
 .img{
     width: 100%;
+    max-height: 29rem;
+}
+
+/*--------------------------------------------------*/
+/* ULTIMOS AGREGADOS DEL FOOTER */
+.foot{
+    background: #1d3557;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    height: 18rem;
+    display: flex;
+    justify-content: space-around;
+    color: white;
+}
+.logito{
+    width: 3rem;
+    border-radius: 23px;
+    height: 2rem;
+    margin-top: 1rem;
+    margin-right: 15px;
+}
+.column{
+    max-width: 18rem;
+}
+.c1{
+    display: flex;
+    margin-top: 3rem;
+    justify-content: space-evenly;
+}
+.subtittles h2{
+    font-weight: bold;
+}
+.c2{
+    margin-top: 0.5rem;
+    margin-right: 5rem;
+}
+.c3{
+    margin-right: 3rem;
+}
+.redes{
+    display: grid;
+    justify-items: center;
+}
+.row{
+    margin: 5px;
+}
+.row:hover{
+    font-size: 1.2rem;
+    font-weight: bold;
+    background-color: orangered;
+    border-radius: 7px;
+}
+.sub-tittle{
+    font-weight: bold;
+    font-size: 22px;
+}
+.last{
+    /* background: red; */
+    position: absolute;
+    bottom: 0;
+    margin-right: 0.5rem;
+    font-size: 20px;
+}
+.enlace:hover{
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: orangered;
 }
