--- a/assets/style.css
+++ b/assets/style.css
@@ -2,11 +2,13 @@
 
 *{
     font-family: 'Roboto';
+
 }
 .titulo{
+    color: #fff;
+    text-shadow: 1px 1px 2px black;
     font-size: 3em;
-    font-weight: bold;
-    margin: 0.5em 0;
+
 }
 
 .header{
@@ -19,9 +21,10 @@
     flex-wrap: wrap;
     text-align: center;
     background-color: #457b9d;
-    overflow: hidden;
     margin: 0;
     padding: 0;
+    
+    
 }
 #activo{
     background-color: #1d3557;
@@ -29,7 +32,7 @@
 }
 #activo a{
 	color: white;
-    font-size: 1.2em;
+    
 }
 /* Parennnn */
 
@@ -37,8 +40,11 @@
     flex-grow: 1;
     list-style-type: none;
     color: white;
-    padding: 15px 20px;
+    padding: 10px;
+    min-width: 10%;
     text-decoration: none;
+    text-align: center;
+    margin: 0;
     
 }
 .item--nav:hover{
@@ -46,79 +52,171 @@
     
 }
 a{
+    
     text-decoration: none;
     color: whitesmoke;
+}
+.item--nav a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    
 }
 
 .container{
     width: 100%;
+    
 }
 
 
 body{
-    background-color: rgb(210, 227, 232);
+    /*background: linear-gradient( to bottom, DodgerBlue  ,white 80%, orange);*/
+    /*background: linear-gradient(180deg, DodgerBlue 0%, white 60%);*/
+    background: linear-gradient(180deg, rgba(25,132,154,1) 0%, rgba(92,210,237,1) 40%, rgba(150,199,209,1) 85%);
 }
 
 .container--text{
-    margin: 15px;
+    padding: 20px;
+    font-size: 100%;
+    color: #fff;
 }
 
 .ctn--img{
     padding: 5px 0;
     width: 100%;
-    max-height: 29rem;
 }
 .img{
-    width: 100%;
-    max-height: 29rem;
+    display: block;
+    margin: auto;
+    padding: 20px 0px;
+    width: 90%;
 }
+
+
+/* ---CONTACTENOS------------------- */
+
+.container--form{
+    
+    justify-content: space-around;
+    
+    display: flex;
+    flex-wrap: wrap;
+    grid-row: 1;
+    border: solid black 1.5px;
+    padding: 20px;
+    
+    
+}
+.container--img--form{
+    margin: 10px 10px;
+    min-width: 200px;
+    box-shadow: 1px 2px 5px;
+    
+}
+
+
+
+.container--content--form{
+    max-width: 100%;
+    margin: 10px;
+    padding: 20px;
+    background-color: rgba(6, 121, 252, 0.081);
+    box-shadow: 1px 2px 5px;
+    font-weight: bold;
+    border: solid 1px rgba(0, 0, 0, 0.084);
+    border-radius: 10px;
+
+
+}
+.inputs--form{
+    max-width: 90%;
+}
+.form{
+    
+    max-width: 90%;
+}
+
+.form input[type="submit"]{
+    background-color:LightSkyBlue;
+    border: none;
+    margin-top: 10px;
+    letter-spacing: 3px;
+    color: black ;
+    font-weight: bold;
+    text-transform: RoyalBlue;
+    cursor: pointer;
+    padding: 7px;
+    font-size: 13px;
+    border-radius: 10PX;
+    border: 2px solid rgba(0, 0, 0, 0.237);
+ 
+
+}
+.form  input[type="submit"]:hover{
+    background-color: #457b9d;
+}
+
+
+
+
+
+
+
 
 /*--------------------------------------------------*/
 /* ULTIMOS AGREGADOS DEL FOOTER */
 .foot{
+    
     background: #1d3557;
     width: 100%;
-    position: absolute;
-    bottom: 0;
-    height: 18rem;
     display: flex;
+    flex-wrap: wrap ;
     justify-content: space-around;
     color: white;
+    min-width: 30%;
+
 }
 .logito{
-    width: 3rem;
+    width: 15%;
+    min-width: 75px;
     border-radius: 23px;
-    height: 2rem;
-    margin-top: 1rem;
-    margin-right: 15px;
 }
+
 .column{
-    max-width: 18rem;
+    width: 30%;
 }
+
 .c1{
-    display: flex;
-    margin-top: 3rem;
-    justify-content: space-evenly;
+    font-size: 100%;
 }
+
+.column p{
+    margin: 5px;
+}
+.column h2{
+    margin-top: 10px;
+}
+
 .subtittles h2{
     font-weight: bold;
 }
-.c2{
-    margin-top: 0.5rem;
-    margin-right: 5rem;
-}
-.c3{
-    margin-right: 3rem;
-}
+
+    
 .redes{
     display: grid;
     justify-items: center;
 }
 .row{
-    margin: 5px;
+    font-size:150%;
+    padding: 10px 10px;
+}
+.redes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .row:hover{
-    font-size: 1.2rem;
+    font-size: 150%;
     font-weight: bold;
     background-color: orangered;
     border-radius: 7px;
@@ -127,15 +225,117 @@ body{
     font-weight: bold;
     font-size: 22px;
 }
-.last{
-    /* background: red; */
-    position: absolute;
-    bottom: 0;
-    margin-right: 0.5rem;
-    font-size: 20px;
-}
 .enlace:hover{
-    font-size: 1.5rem;
+    font-size: 100%;
     font-weight: bold;
     color: orangered;
+}
+
+
+/* comentarios */
+
+
+
+
+.container--comentarios{
+    
+    justify-content: space-around;
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    grid-row: 1;
+    border: solid black 1.5px;
+    padding: 10px;
+    
+    
+    
+}
+.container--img--comentarios{
+    
+    max-height: 100%;
+    overflow: hidden;
+    align-items: center;
+    width: 100%;
+    object-fit: auto;
+    
+}
+.txt-comentario{
+    font-size: 1.2em;
+    font-weight: bold;
+    font-style: oblique;
+}
+.comentario{
+    background-color: white;
+    padding: 70px 40px;
+    box-shadow: 1px 2px 5px;
+    margin: 20px 10px;
+}
+
+/* ULTIMOS AGREGADOS DE COMENTARIOS */
+.coment span{
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: orangered;
+}
+.coment{
+    background-color: #203a5d;
+    padding: 1.2rem;
+    width: 50%;
+    text-align: center;
+    border-radius: 9px;
+}
+.coment:hover{
+    background-color: #354760;
+}
+.cont_comentario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container--text h3{
+    text-align: center;
+}
+/* ------------------------------ */
+
+
+
+/* ---REGISTRO---------------- */
+
+.container--form--registro{
+    display: flex;
+    min-width: 50%;
+    margin: 10px;
+    padding: 30px 50px;
+    background-color: rgba(6, 121, 252, 0.081);
+    box-shadow: 1px 2px 5px;
+    font-weight: bold;
+    border-radius: 10px;
+    line-height: 1.8em;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    
+
+}
+.form--registro{
+    width: 100%;
+}
+
+.form--registro input[type="submit"]{
+    background-color:LightSkyBlue;
+    border: none;
+    letter-spacing: 3px;
+    font-size: 13px;
+    color: black ;
+    font-weight: bold;
+    text-transform: RoyalBlue;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 10PX;
+    border: 2px solid rgba(0, 0, 0, 0.237);
+
+}
+
+.form--registro input[type="submit"]:hover{
+    background-color: #457b9d;
 }
